# ChangeLog for dev-python/encore
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/encore/ChangeLog,v 1.12 2015/04/08 08:05:02 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> encore-0.3.ebuild,
  encore-0.4.0.ebuild:
  Drop old Python implementations

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> encore-0.4.0.ebuild,
  encore-0.5.1.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> encore-0.4.0.ebuild,
  encore-0.5.1.ebuild:
  amd64 stable, bug 540290

  05 May 2014; Ian Delaney <idella4@gentoo.org> encore-0.5.1.ebuild:
  whitespace

  05 May 2014; Ian Delaney <idella4@gentoo.org>
  +files/encore-0.5.1-pypy-tests.patch, encore-0.5.1.ebuild:
  drop py2.6 add pypy support, cull IUSE flags according to content absent from
  the tarball, patch for some tests to pass under pypy, upgrade test phase to
  accommadate pypy

*encore-0.5.1 (03 May 2014)

  03 May 2014; Patrick Lauer <patrick@gentoo.org> +encore-0.5.1.ebuild:
  Bump

  13 Sep 2013; Michał Górny <mgorny@gentoo.org> encore-0.3.ebuild,
  encore-0.4.0.ebuild:
  Use virtual/python-futures.

*encore-0.4.0 (02 Sep 2013)

  02 Sep 2013; Patrick Lauer <patrick@gentoo.org> +encore-0.4.0.ebuild:
  Bump

  14 May 2013; Ian Delaney <idella4@gentoo.org> -encore-0.2.ebuild:
  drop old

  05 Apr 2013; Mike Gilbert <floppym@gentoo.org> encore-0.3.ebuild:
  Cleanup ebuild. Add missing deps for setuptools and nose.

*encore-0.3 (05 Apr 2013)

  05 Apr 2013; Ian Delaney <idella4@gentoo.org> +encore-0.3.ebuild:
  bump

*encore-0.2 (06 Dec 2012)

  06 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> +encore-0.2.ebuild,
  +metadata.xml:
  Initial import