@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>python</herd>
-<longdescription lang="en">
+  <herd>python</herd>
+  <longdescription lang="en">
   This package consists of a collection of core utility packages
   useful for building Python applications. This package is intended to
   be at the bottom of the software stack and have zero required
   external dependencies aside from the Python Standard Library.
 </longdescription>
-<upstream>
-  <remote-id type="pypi">encore</remote-id>
-</upstream>
+  <upstream>
+    <remote-id type="pypi">encore</remote-id>
+    <remote-id type="github">enthought/encore</remote-id>
+  </upstream>
 </pkgmetadata>
