@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/encore
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/encore/ChangeLog,v 1.12 2015/04/08 08:05:02 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/encore/ChangeLog,v 1.13 2015/06/07 13:16:06 jlec Exp $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add github to remote-id in metadata.xml
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> encore-0.3.ebuild,
   encore-0.4.0.ebuild:
